# callback-vs-sync-api

./: .env.example  .gitignore  ONBOARDING.md  README.md  pyproject.toml
loadgen/: callback_server.py  cli.py  runner.py  stats.py
src/app/: callback.py  config.py  database.py  main.py  models.py  rate_limit.py  task_queue.py  work.py
src/app/routes/: async_route.py  health.py  requests_route.py  sync_route.py
tests/: conftest.py  test_async.py  test_callback.py  test_edge_cases.py  test_sync.py  test_work.py
